Fix navigation bar alignment

--- a/static/css/player_info.css
+++ b/static/css/player_info.css
@@ -74,8 +74,8 @@ body[data-theme="colour1"] {
     border-color: black;
     border-radius: 15px;
     padding: 5px;
-    height: 6%;
-    width: 8.5%;
+    height: 56.25px;
+    width: 162.5px;
     text-align: center;
     box-sizing: border-box;
     display: flex;
