--- a/static/css/squad_builder.css
+++ b/static/css/squad_builder.css
@@ -71,9 +71,9 @@ body[data-theme="colour1"] {
     border-color: black;
     border-radius: 15px;
     padding: 5px;
-    height: 6%;
-    width: 8.5%;
-    margin-top: -0.05%;
+    height: 56.25px;
+    width: 162.5px;
+    margin-top: 0%;
     text-align: center;
     box-sizing: border-box;
     display: flex;
@@ -98,7 +98,7 @@ body[data-theme="colour1"] {
 .home-container::before {
     position: absolute;
     left: 4%;
-    top: 25%;
+    top: 0%;
     height: 35px;
     width: 75px;
     border-radius: 10px;
